<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>core-service</module>
        <module>client-service</module>
    </modules>
    <groupId>org.calisto</groupId>
    <artifactId>hotel</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>hotel</name>
    <description>Hotel Apps</description>
    <properties>
        <spring.boot.version>3.1.2</spring.boot.version>
        <java.version>17</java.version>
        <mysql.connector.j>8.1.0</mysql.connector.j>
        <lombok.version>1.18.22</lombok.version>
        <flyway-core.version>9.15.2</flyway-core.version>
        <boostrap.version>5.3.0</boostrap.version>
        <maven.plugin.version>3.1.3</maven.plugin.version>
        <maven.compiler.version>3.11.0</maven.compiler.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <profiles>
        <profile>
            <id>local</id>
            <properties>
                <spring.profiles.active>local</spring.profiles.active>
            </properties>
        </profile>
        <profile>
            <id>docker</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <spring.profiles.active>docker</spring.profiles.active>
            </properties>
        </profile>
    </profiles>
</project>
